# ChangeLog for dev-haskell/random-stream
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*random-stream-0.1.1 (14 Mar 2011)

  14 Mar 2011; Francisco Blas Izquierdo Riera (klondike)
  +random-stream-0.1.1.ebuild, +metadata.xml:
  Initial commit
