@@ -1,3 +1,18 @@
-DIST random-stream-0.1.1.tar.gz 3426 RMD160 a5ba8ce3238cdf44f2eaffce7c5ac4bb711bb15a SHA1 cbcfb8834172f263a34228c90cb3a1956ce8a2d3 SHA256 c6f48de53efd13c331afa13834d68b07e8c85e51d20e12f4cb5f5638fe0c2960
-EBUILD random-stream-0.1.1.ebuild 957 RMD160 21080971f5c59b5b0dec9ee3907020dfca9daf08 SHA1 91dd41c0ddbb01847c19635f28904a35746a52d5 SHA256 a259c17e857d3e4f9e64dd48352c8e232efefe21632ca874762db2e17531b0ae
-MISC metadata.xml 442 RMD160 e4279ba6234533ba4803f6590c508d8021c48733 SHA1 6b707190caf80c179769f9d278a5dd0f503c9f69 SHA256 4f1efe4cc187752b5988bdc382608e9893b012ecbead1f131ebc224d6b3c60bd
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST random-stream-0.1.1.tar.gz 3426 SHA256 c6f48de53efd13c331afa13834d68b07e8c85e51d20e12f4cb5f5638fe0c2960 SHA512 2cf39a1df75a9fa8a651124adf22413cee94655348835d81d83ac428a6ab5b2d89d52388a3e3ee0c813bc74cfc507063e6f150f4718ac8c11f1c9dc85f2ea239 WHIRLPOOL 019982732b17e42b9a5be32e21db48f28c052a5ea08487421fb1f6663fe6b2e70424774b5bcc72b4c193965485b30cf09b2e478c9e25c792354f748c2acb5670
+EBUILD random-stream-0.1.1.ebuild 947 SHA256 e5a15188e45c4b48a7d4c1f3346ae744052e1c35108818575e9ce0a365092325 SHA512 0b0a489f7010918316f4f5076a93e6c4b3fb995204a79208f083ab042c3f984a33915d587400522e8498e4e1dbff3397a68252bd5be87d9b8cbf9a4168a396f4 WHIRLPOOL d0e90b25f25a76db751ad7973b1f7adb5efdbc5b8cdebd3ff0311cb1dc423a0b2facd8315f47eedb97bd3f0afed9418b66da9ce7f725c1aaa7928c8bb7651c69
+MISC ChangeLog 410 SHA256 fdcc74bf160d8b794147fdf134e492e1591af63a156ae963b39645f9f071507c SHA512 2ad5b731352a0ff8bb4d862fc824ca663a9b6855280e02d758c7ac794707f685daa618ffba307b7eac1276826e52dac78a9378da3051aaa27d859ea500a51dbd WHIRLPOOL 5ac1dbba83a980691a2805b282d07efff1da3b37d92b8df02b1b1dc75103271d380582a26232d217efa4f21d0a86e226f40c10cf52dc6997850aff6f4d7fe2a7
+MISC metadata.xml 419 SHA256 045bbfdc33eb83afa48eabb7921e72adb9a014ef3adce381056056b293120897 SHA512 1e9952b1416fdfcf8dcf89cd503fa464d2a4a719a70a258c6af591d96b8878030d6f316e1b01628795bf6312d981a43ccf5b4178936537a3990257ebba915704 WHIRLPOOL a642d6917007921cf18fe28b1f47a7825fa5aa14831e9b3968fd1cc301cc98915e9e63e536aeb111b857530226490f57a9c40455c980a2e28f60b3f00669ceb1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJURGMcAAoJEKXBodJLEo5SOncIAIjoWMayYKXorgs+O0Gq2GMW
+uugSq+7DhEH7is5+uOs8UzHWcIQSuS1mzu2Z2QwM+eIJi3C0Yg9zUlO1Ob7qdNgo
+W/XrXb2LmXOji29ntvOtJIC2NbrlI9BoUTJtdOTGRzkFBewy1R56axk8APeIOb9A
+OHOIN+kifEl1efCvKN0nu7tdakTlkTkjOB8PVAdnxIQc4/c949kc0z9uY358KoNG
+TUln/26/pvEIBFDOLNDqT9tvbQX/pqcbfNhmS62Fv24S8+XRhKnQc1L2EG9mzzbI
+RjW6Xm+MhrA0iPLxyFZIm4F/oQFOVpEq7S+ZzTpUqv174xTv9pUxYtVv8R0tlDU=
+=T0RS
+-----END PGP SIGNATURE-----
