@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>no-herd</herd>
 	<maintainer>
-		<email>klondike@xiscosoft.es</email>
+		<email>klondike@klondike.es</email>
 		<name>Francisco Blas Izquierdo Riera</name>
 	</maintainer>
 	<use>
