@@ -1,10 +1,13 @@
 # ChangeLog for dev-haskell/random-stream
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  20 Oct 2014; Francisco Blas Izquierdo Riera (klondike) metadata.xml,
+  random-stream-0.1.1.ebuild:
+  Fix some repoman issues
 
 *random-stream-0.1.1 (14 Mar 2011)
 
   14 Mar 2011; Francisco Blas Izquierdo Riera (klondike)
   +random-stream-0.1.1.ebuild, +metadata.xml:
   Initial commit
-
